sandbox/output
TicketDispenserTest.java:50: error: cannot find symbol
        TurnNumberSequence mockSequence = mock(TurnNumberSequence.class);
                                          ^
  symbol:   method mock(Class<TurnNumberSequence>)
  location: class TicketDispenserTest
TicketDispenserTest.java:51: error: cannot find symbol
        when(mockSequence.getNextTurnNumber()).thenReturn(59);
        ^
  symbol:   method when(int)
  location: class TicketDispenserTest
TicketDispenserTest.java:57: error: cannot find symbol
        verify(mockSequence).getNextTurnNumber();
        ^
  symbol:   method verify(TurnNumberSequence)
  location: class TicketDispenserTest
3 errors
